# vad-benchmark

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: datasets.yaml
scripts/: build_synthetic.py  download_esc50.sh  download_librispeech_devclean.sh  download_voxconverse_labels.sh
src/vad_benchmark/: __init__.py  audio.py  cli.py  envutil.py  labeling.py  metrics.py  runner.py  sweep.py  sweep_runner.py  types.py
src/vad_benchmark/datasets/: __init__.py  base.py  esc50.py  rttm.py  synthetic.py  voxconverse.py
src/vad_benchmark/engines/: __init__.py  aicoustics.py  base.py  silero.py  webrtc.py
tests/: test_labeling.py
